css/style.css
body {
    margin: 0;
    display: flex;
    font-family: 'Poppins', sans-serif;
    flex-wrap: wrap;
}

/* Colors page scheme */
.dark-theme {
    color: #C5C7C7;
    background-color: #212121;
}

.light-theme {
    background-color: #C5C7C7;
    color: #212121;
}

.button-dark-theme {
    color: black;
}

.button-light-theme {
    color: white;
    background-color: black;
}


/* Styling itens */
ul {
    list-style: none;
}

@media (min-width: 740px){
    menu {
        margin: 0;
        width: 100%;
        display: grid;
        text-decoration: none;
        grid-template-columns: repeat(2,1fr);
    }
}

@media (max-width: 740px){
    menu {
        margin: 0;
        width: 100%;
        display: grid;
        text-decoration: none;
        grid-template-columns: repeat(1, 1fr);
        
    }
    .menu-itens {
        flex-wrap: wrap;
        flex-direction: column;
    }

    .li-iten {
        width: 100%;
    }
    li {
        margin-top: 30px;
    }
    .li-iten-home{
        display: flex;
    }
}

.menu-itens {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}

.li-iten {
    padding: 15px;
    text-decoration: none;
    font-size: 1.3rem;
    border-radius: 20px;
}

.li-iten:hover {
    opacity: 90%;
    cursor: pointer;
    background-color: white;
    color: black;
}

.li-iten-home {
    text-decoration: none;
    font-size: 1.6rem;
}

.li-iten-home:hover {
    opacity: 80%;
    cursor: pointer;
}

.fas {
    padding-right: 10px;
    padding-left: 10px;
    cursor: pointer;
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 100%;
}

section {
    display: flex;
    width: 100%;
    justify-content: space-around;
}

.row {
    flex-direction: row;
}

.column {
    flex-direction: column;
}

.header-left-side {
    display: flex;
    padding-top: 5vw;
}

.lottie {
    display: flex;
    width: 35rem;
    height: auto;
}

.scroll {
    display: flex;
    width: 100%;
    justify-content: center;
    padding-top: 94px;
    padding-bottom: 20px;
}

.scroll-iten {
    width: 40px;
}

.button:hover {
    cursor: pointer;
    opacity: 100%;
}

.button {
    border-radius: 20px;
    border: none;
    font-size: 1.3rem;
    opacity: 90%;
    padding: 10px 30px;
}

h1 {
    margin-top: 0px;
    padding-top: 0px;
}

p {
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.margin-top-20px {
    margin-top: 20px;
    ;
}

.footer {
    padding: 50px;
    justify-content: space-around;
}

.padding-top-10px {
    padding-top: 10px;
}

.padding-left-right-5px {
    padding-left: 5px;
    padding-right: 5px;
}

.border {
    border: 2px solid black;
    padding: 5px;
}

@media (max-width: 740px) {
    .cards {
        display: grid;
        grid-template-columns: 1;
        grid-template-rows: auto;
    }
}

@media (min-width: 741px) {
    .cards {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: auto;
    }
}

@media (min-width: 960px) {
    .cards {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: auto;
    }
}

.card {
    display: flex;
    background-color: #212121;
    margin: 25px;
    padding: 15px;
}

.card-header {
    display: flex;
    justify-content: space-between;
}

.card-content {
    display: flex;
}

.card-footer {
    display: flex;
    justify-content: space-around;
    padding: 20px;
}

